--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html>
     <body>
         <h1> Welcome to my web page!</h1>
-    </p> This is the professional web page for Aaron Tilton, hosten on github pages. </p>
-    </body>
+    </p> This is the professional web page for Aaron Tilton, hosted on github pages. </p>
+
+        <div id="clickme" onclick="document.getElementById('clickme').innerHTML=Date()"> 
+             Hello 
+        </div>
+</body>
 </html>
