Added email div and removed arbitrary date div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1> Welcome to my web page!</h1>
     </p> This is the professional web page for Aaron Tilton, hosted on github pages. </p>
 
-    <div id="clickme" onclick="document.getElementById('clickme').innerHTML=Date()"> 
-         Hello 
-    </div>
+   <div id="email" onclick="showhide()">Show my email</div>
+    
+
 </body>
