--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     Current time: <div id="clock"></div>
     <h1> Welcome to my web page!</h1>
     </p> This is the professional web page for Aaron Tilton, hosted on github pages. </p>
-
-   <div id="email" onclick="showhide()">Show my email</div>
-    
+    <h2> About me </h2>
+<img source="https://media.licdn.com/dms/image/C4E03AQEM22Z9HArvlA/profile-displayphoto-shrink_200_200/0/1568932879108?e=1683763200&v=beta&t=cf77hPFPcCPY1KtnpahpK_7NtJYBx8oDao-qZyPyilc" alt="That's me!" style="width:500px">
+<p> Aaron Tilton </p> <br>
+<p> LinkedIn: https://www.linkedin.com/in/aaron-d-tilton/</p>
+<div id="email" onclick="showhide()">Show my email</div>
+<p> Skills: JavaScript, HTML, Java, Python, noSQL </p>
+<p> Computer Science major with one year's experience working in IT and Cyber Security  </p>
+   
+   
 
 </body>
